--- a/Hometab/index.html
+++ b/Hometab/index.html
@@ -28,14 +28,14 @@
             <div style="padding: 15px;width: 20px;height: 20px;text-align: center;font-size: 100%;"> + </div>
         </div>
         <div class="wcircle-menu" style="display:none;">
-            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">*</a></div><!--parser--><!--bookmark1-->
+            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">B</a></div><!--parser--><!--bookmark1-->
 
-            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">*</a></div><!--parser--><!--bookmark1-->
-            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">*</a></div><!--parser--><!--bookmark1-->
-            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">*</a></div><!--parser--><!--bookmark1-->
-            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">*</a></div><!--parser--><!--bookmark1-->
-            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">*</a></div><!--parser--><!--bookmark1-->
-            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">*</a></div><!--parser--><!--bookmark1-->
+            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">B</a></div><!--parser--><!--bookmark2-->
+            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">B</a></div><!--parser--><!--bookmark3-->
+            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">B</a></div><!--parser--><!--bookmark4-->
+            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">B</a></div><!--parser--><!--bookmark5-->
+            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">B</a></div><!--parser--><!--bookmark6-->
+            <div class="wcircle-menu-item" style="background-color:gray;border-radius:50%;padding:15px;width:20px;height:20px;"><a href="https://facebook.com">B</a></div><!--parser--><!--bookmark7-->
             <div class="wcircle-menu-item" style="background-color:#2980b9;border-radius:50%;padding:15px;width:20px;height:20px;font-size=30%"><a href="..\homepage_editor_exec.bat">EDIT</a></div> 
         </div>
     </div>
